# HAL-ROOT

./: .gitignore  CMakeLists.txt  CompileSource.C  CompileSourceOld.C  Makefile  README  README.md
data/: settings.pkl
docs/: Doxyfile
docs/html/: _algorithm_8h.html  _algorithm_8h_source.html  _algorithms_8h.html  _algorithms_8h_source.html  _analysis_8h.html  _analysis_8h_source.html  _analysis_data_8h.html  _analysis_data_8h_source.html  _analysis_selector_8h.html  _analysis_selector_8h_source.html  _analysis_tree_reader_8h.html  _analysis_tree_reader_8h_source.html  _analysis_tree_writer_8h.html  _analysis_tree_writer_8h_source.html  _analysis_utils_8h_source.html  _attach_attribute_8h.html  _attach_attribute_8h_source.html  _common_8h_source.html  _cut_8h.html  _cut_8h_source.html  _cut_algorithm_8h_source.html  _cut_optimizer_8h_source.html  _exceptions_8h_source.html  _formulas.tex  _generic_data_8h_source.html  _generic_particle_8h_source.html  _h_a_l_8h_source.html  _h_a_l___link_def_8h_source.html  _import_particle_8h.html  _import_particle_8h_source.html  _import_value_8h.html  _import_value_8h.js  _import_value_8h_source.html  _integrator_8h_source.html  _interpolator_8h_source.html  _min_chi_squared_selection_8h.html  _min_chi_squared_selection_8h_source.html  _monitor_8h.html  _monitor_8h_source.html  _particle_rank_selection_8h.html  (+222 more)
docs/images/: logo.xcf
docs/latex/: _algorithm_8h.tex  _algorithms_8h.tex  _analysis_8h.tex  _analysis_data_8h.tex  _analysis_selector_8h.tex  _analysis_tree_reader_8h.tex  _analysis_tree_writer_8h.tex  _attach_attribute_8h.tex  _cut_8h.tex  _import_particle_8h.tex  _import_value_8h.tex  _min_chi_squared_selection_8h.tex  _monitor_8h.tex  _particle_rank_selection_8h.tex  _python_algorithm_8h.tex  _select_lineage_8h.tex  _select_particle_8h.tex  _select_rank_8h.tex  _select_ref_particle_8h.tex  _store_particle_8h.tex  _vec_add_reco_8h.tex  annotated.tex  class_h_a_l_1_1_algorithm.eps  class_h_a_l_1_1_algorithm.tex  class_h_a_l_1_1_algorithms_1_1_attach_attribute.eps  class_h_a_l_1_1_algorithms_1_1_attach_attribute.tex  class_h_a_l_1_1_algorithms_1_1_cut.eps  class_h_a_l_1_1_algorithms_1_1_cut.tex  class_h_a_l_1_1_algorithms_1_1_empty_cut.eps  class_h_a_l_1_1_algorithms_1_1_empty_cut.tex  class_h_a_l_1_1_algorithms_1_1_import_bool.eps  class_h_a_l_1_1_algorithms_1_1_import_bool.tex  class_h_a_l_1_1_algorithms_1_1_import_bool_value.eps  class_h_a_l_1_1_algorithms_1_1_import_bool_value.tex  class_h_a_l_1_1_algorithms_1_1_import_counting.eps  class_h_a_l_1_1_algorithms_1_1_import_counting.tex  class_h_a_l_1_1_algorithms_1_1_import_counting_value.eps  (+107 more)
include/: Algorithms.h  AnalysisUtils.h  CutOptimizer.h  HAL.h  Integrator.h  Interpolator.h  Object.h  Particle.h  PlotUtils.h
include/HAL/: Algorithm.h  Algorithms.h  (+21 more)
lib/: HAL.py  HAL_dict.cxx  HAL_dict.h
python/: HAL-config.py
src/: Algorithm.cxx  Algorithms.cxx  Analysis.cxx  AnalysisData.cxx  AnalysisSelector.cxx  AnalysisTreeReader.cxx  AnalysisTreeWriter.cxx  AnalysisUtils.cxx  AttachAttribute.cxx  Cut.cxx  CutAlgorithm.cxx  CutOptimizer.cxx  GenericData.cxx  GenericParticle.cxx  HAL_dict.cxx  HAL_dict.h  ImportParticle.cxx  ImportValue.cxx  Integrator.cxx  Interpolator.cxx  MinChiSquaredSelection.cxx  Monitor.cxx  Object.cxx  Particle.cxx  PlotUtils.cxx  PythonAlgorithm.cxx  PythonReconstructionAlgorithm.cxx  SelectLineage.cxx  SelectParticle.cxx  SelectRank.cxx  SelectRefParticle.cxx  StoreParticle.cxx  VecAddReco.cxx
tests/: TestAlgorithms.C  TestCutOptimizer.C  TestIntegrator.C  TestPythonHAL.py
(+90 files in other folders)
